--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-midir = "0.9.1"
+anyhow = "1.0.79"
+cpal = "0.15.2"
+fundsp = "0.16.0"
 rand = "0.8.5"
-vst = "0.4.0"
